<?xml version="1.0"?>
<package format="2">
  <name>anti_uav_map_generator</name>
  <version>0.0.0</version>
  <description>Random obstacle point cloud generator for anti-UAV simulations.</description>

  <maintainer email="qxh@example.com">qxh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>

  <export/>
</package>
