<?xml version="1.0"?>
<package format="2">
  <name>experiment_recorder</name>
  <version>0.0.1</version>
  <description>Record compact trajectories and encirclement metrics.</description>
  <maintainer email="qxh@todo.todo">qxh</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <export/>
</package>

