<?xml version="1.0"?>
<package format="2">
  <name>interceptor_uav_sim</name>
  <version>0.0.1</version>
  <description>Interceptor UAV motion model driven by ego-planner PositionCommand.</description>

  <maintainer email="qxh@example.com">qxh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>quadrotor_msgs</depend>
</package>