<?xml version="1.0"?>
<package format="2">
  <name>system_launch</name>
  <version>0.0.1</version>
  <description>Launch files for the anti-UAV Fast-Capture integrated pipeline.</description>

  <maintainer email="qxh@todo.todo">qxh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cooperative_assignment</exec_depend>
  <exec_depend>cooperative_guidance</exec_depend>
  <exec_depend>radar_measurement_simulator</exec_depend>
  <exec_depend>robust_target_tracking</exec_depend>
  <exec_depend>target_scenario_generator</exec_depend>
  <exec_depend>threat_assessment</exec_depend>
  <exec_depend>uav_path_tracker</exec_depend>
  <exec_depend>uav_planner_bridge</exec_depend>
</package>
