<?xml version="1.0"?>
<package format="2">
  <name>systerm_launch</name>
  <version>0.0.1</version>
  <description>Launch files for anti-uav ego-planner systerm.</description>

  <maintainer email="qxh@example.com">qxh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>target_scenario_generator</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>ego_planner_bridge</exec_depend>
  <exec_depend>radar_measurement_simulator</exec_depend>
  <exec_depend>robust_target_tracking</exec_depend>
  <exec_depend>threat_assessment</exec_depend>
  <exec_depend>cooperative_assignment</exec_depend>
  <exec_depend>cooperative_guidance</exec_depend>
</package>