<?xml version="1.0"?>
<package format="2">
  <name>systerm_launch</name>
  <version>0.0.1</version>
  <description>Launch files for anti-UAV 3v4 moving encirclement.</description>
  <maintainer email="qxh@example.com">qxh</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>target_scenario_generator</exec_depend>
  <exec_depend>mission_manager</exec_depend>
  <exec_depend>ego_planner</exec_depend>
  <exec_depend>target_uav_sim</exec_depend>
  <exec_depend>interceptor_uav_sim</exec_depend>
  <exec_depend>radar_measurement_simulator</exec_depend>
  <exec_depend>robust_target_tracking</exec_depend>
  <exec_depend>threat_assessment</exec_depend>
  <exec_depend>cooperative_guidance</exec_depend>
  <exec_depend>experiment_recorder</exec_depend>
</package>
