<?xml version="1.0"?>
<package format="2">
  <name>uav_path_tracker</name>
  <version>0.0.1</version>
  <description>Execute planned UAV paths and publish simulated UAV states.</description>
  <maintainer email="qxh@example.com">qxh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <export/>
</package>