<?xml version="1.0"?>
<package format="2">
  <name>uav_planner_bridge</name>
  <version>0.0.1</version>
  <description>Unified planner bridge for target UAVs and interceptor UAVs.</description>

  <maintainer email="qxh@example.com">qxh</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
